[package]
name = "gyan85"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.86"
clap = { version = "4.1.4", features = ["derive"] }
colored = "2.0.0"
nom = "7.1.3"
serde = { version = "1.0.152", features = ["derive"] }
serde_yaml = { version = "0.9.17" }

[lints.clippy]
unwrap_used = "warn"
missing_docs_in_private_items = "warn"
